z-index fix

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  z-index: -1;
 }
 #root {
   position: absolute;
